azuredeploy.json
{
	"$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"quarkBuildsStorageAccountName": {
		    "type": "string",
		    "defaultValue": "qppbuilds"
		},

		"quarkBuildsStorageAccountKey": {
		    "type": "string",
		    "defaultValue": ""
		},

		"appGatewaySkuSize": {
			"defaultValue": "Standard_Medium",
			"type": "String",
			"allowedValues": [
				"Standard_Small",
				"Standard_Medium",
				"Standard_Large"				
			],
			"metadata": {
				"description": "Application Gateway is currently offered in three sizes: Small, Medium, and Large. For details and pricing see: https://docs.microsoft.com/en-gb/azure/application-gateway/application-gateway-introduction#gateway-sizes-and-instances"
			}
			
		},
		"appGatewayCapacity": {
			"defaultValue": 2,
			"allowedValues": [
				1,
				2,
				3,
				4,
				5,
				6,
				7,
				8,
				9,
				10
			],
			"type": "Int",
			"metadata": {
				"description": "Specify the instance count of the application gateway. A minimum instance count of 2 is recommended for production workloads."
			}

		},
		"appGatewayFrontEndPort": {
			"defaultValue": 80,
			"type": "Int"
		},

		"QppVirtualMachineSize": {
			"defaultValue": "Standard_D4s_v3",
			"type": "string",
			"metadata": {
				"description": "For detailed list of VM sizes visit page https://docs.microsoft.com/en-gb/azure/virtual-machines/windows/sizes"
			}
		},
		"QppWindowsOSVersion": {
			"type": "string",
			"defaultValue": "2016-Datacenter",
			"allowedValues": [
				"2012-Datacenter",
				"2012-R2-Datacenter",
				"2016-Datacenter-with-Containers",
				"2016-Datacenter"
			],
			"metadata": {
				"description": "The Windows version for the VM. This will pick a fully patched image of this given Windows version."
			}
		},

		"QppVMAdminUsername": {
			"type": "string"
		},
		"QppVMAdminPassword": {
			"type": "securestring"
		},
		"QppVMPublicIpAddressType": {
			"defaultValue": "Dynamic",
			"allowedValues": [
				"Dynamic",
				"Static"
			],
			"type": "string",
			"metadata": {
				"description": "Defines whether the IP address is static or dynamic for Application Gateway."
			}
		},
		"numberOfQppVMs": {
			"defaultValue": 1,
			"type": "int",
			"metadata": {
				"description": "Number of VM instances to be created."
			}
		},

		"assetStorageAccountType": {
		    "type": "string",
		    "defaultValue": "Standard_LRS",
		    "allowedValues": [
				"Standard_LRS",
				"Standard_ZRS",
				"Standard_GRS",
				"Standard_RAGRS"				
			],
			"metadata": {
			 "description": "Azure Storage replication type. For details: https://docs.microsoft.com/en-gb/azure/storage/common/storage-redundancy#read-access-geo-redundant-storage ."
			}
		}

		
	},
	"variables": {
		"namingSuffix": "[toLower(substring(uniqueString(resourceGroup().id), 0, 9))]",
		"qppVirtualMachineName": "qppvm",
		"dbserverName": "[concat('qppdb-', variables('namingSuffix'))]",
		"applicationGatewayName": "[concat('qppappgateway_', variables('namingSuffix'))]",
		"nicName": "[concat('qppvmnic_', variables('namingSuffix'))]",
		"networkSecurityGroupName": "[concat('qppnsg_', variables('namingSuffix'))]",
		"vnetName": "[toLower(concat('qppvnet_', substring(uniqueString(resourceGroup().id), 0, 6) ))]",
		"vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",

		"diagnosticsStorageAccountName": "[concat('qppdiagsa', variables('namingSuffix'))]",
		"diagnosticsStorageAccountType": "Standard_LRS",
		"subnetNameGateway": "qppgatewaysubnet",
		"subnetNameVMs": "qppvmsubnet",
		"subnetRefVms": "[concat(variables('vnetId'), '/subnets/', variables('subnetNameVMs'))]",
		"subnetRefGateway": "[concat(variables('vnetId'), '/subnets/', variables('subnetNameGateway'))]",

		"vmPublicIpAddressName": "[toLower(concat('qppvmip_', variables('namingSuffix')))]",

		"gwPublicIpAddressName": "[toLower(concat('qppgatewayip_', variables('namingSuffix') ) )]",
		"publicIPRef": "[resourceId('Microsoft.Network/publicIPAddresses/', variables('gwPublicIpAddressName'))]",

		"applicationGatewayID": "[resourceId('Microsoft.Network/applicationGateways', variables('applicationGatewayName'))]",
		"vmCustomExtension": "[toLower(concat('VmCustomExtension-', variables('namingSuffix')))]",
		"scriptFileUri": "[concat('https://', parameters('quarkBuildsStorageAccountName'), '.blob.core.windows.net/setup/VmPostDeployScript.bat')]",
		"UriFileNamePieces": "[split(variables('scriptFileUri'), '/')]",
		"firstFileNameString": "[variables('UriFileNamePieces')[sub(length(variables('UriFileNamePieces')), 1)]]",
		"firstFileNameBreakString": "[split(variables('firstFileNameString'), '?')]",
		"firstFileName": "[variables('firstFileNameBreakString')[0]]",
		"assetsStorageName": "[concat('qppassets', variables('namingSuffix'))]",
		"scriptArguments": "[concat(variables('dbserverName'), ' ', parameters('numberOfQppVMs'), ' ',parameters('quarkBuildsStorageAccountName'), ' ', concat('\"',parameters('quarkBuildsStorageAccountKey'),'\"'), ' ',variables('assetsStorageName') )]"
	},
	"resources": [
		{
		    "apiVersion": "2016-12-01",
		    "name": "[variables('assetsStorageName')]",
		    "location": "[resourceGroup().location]",
		    "type": "Microsoft.Storage/storageAccounts",
		    "sku": {
			"name": "[parameters('assetStorageAccountType')]"
		    },
		    "kind": "Storage",
		    "properties": {
			"encryption": {
			    "services": {
				"blob": {
				    "enabled": "false"
				},
				"file": {
				    "enabled": "false"
				}
			    },
			    "keySource": "Microsoft.Storage"
			},
			"supportsHttpsTrafficOnly": "false"
		    }
		},

		{
			"apiVersion": "2015-05-01-preview",
			"location": "[resourceGroup().location]",
			"name": "[variables('dbserverName')]",
			"properties": {
				"administratorLogin": "quarkadmin",
				"administratorLoginPassword": "Qpppwd123456",
				"version": "12.0"
			},
			"resources": [{
				"apiVersion": "2014-04-01-preview",
				"dependsOn": [
					"[concat('Microsoft.Sql/servers/', variables('dbserverName'))]"
				],
				"location": "[resourceGroup().location]",
				"name": "AllowAllWindowsAzureIps",
				"properties": {
					"endIpAddress": "0.0.0.0",
					"startIpAddress": "0.0.0.0"
				},
				"type": "firewallrules"
			}],
			"type": "Microsoft.Sql/servers"
		},

		{
			"comments": "Generalized from resource: '/subscriptions/c443b837-c226-4840-85cc-c7b5fc0be02a/resourceGroups/qppRG1/providers/Microsoft.Network/publicIPAddresses/qpppubip'.",
			"type": "Microsoft.Network/publicIPAddresses",
			"name": "[variables('gwPublicIpAddressName')]",
			"apiVersion": "2017-03-01",
			"location": "[resourceGroup().location]",
			"scale": null,
			"properties": {
				"publicIpAllocationMethod": "Dynamic",
				"idleTimeoutInMinutes": 4
			},
			"dependsOn": []
		},
		{
			"comments": "Generalized from resource: '/subscriptions/c443b837-c226-4840-85cc-c7b5fc0be02a/resourceGroups/qppRG1/providers/Microsoft.Network/virtualNetworks/qppvnet1'.",
			"type": "Microsoft.Network/virtualNetworks",
			"name": "[variables('vnetName')]",
			"apiVersion": "2017-03-01",
			"location": "[resourceGroup().location]",
			"scale": null,
			"properties": {
				"addressSpace": {
					"addressPrefixes": [
						"10.0.0.0/16"
					]
				},
				"subnets": [{
						"name": "[variables('subnetNameGateway')]",
						"properties": {
							"addressPrefix": "10.0.2.0/24"
						}
					},
					{
						"name": "[variables('subnetNameVMs')]",
						"properties": {
							"addressPrefix": "10.0.1.0/24"
						}
					}
				],
				"virtualNetworkPeerings": []
			},
			"dependsOn": []
		},
		{
			"type": "Microsoft.Network/applicationGateways",
			"name": "[variables('applicationGatewayName')]",
			"apiVersion": "2017-03-01",
			"location": "[resourceGroup().location]",
			"properties": {
				"sku": {
					"name": "[parameters('appGatewaySkuSize')]",
					"tier": "Standard",
					"capacity": "[parameters('appGatewayCapacity')]"
				},
				"gatewayIPConfigurations": [{
					"name": "appGatewayIpConfig",
					"properties": {
						"subnet": {
							"id": "[variables('subnetRefGateway')]"
						}
					}
				}],
				"frontendIPConfigurations": [{
					"name": "appGatewayFrontendIP",
					"properties": {
						"PublicIPAddress": {
							"id": "[variables('publicIPRef')]"
						}
					}
				}],
				"frontendPorts": [{
					"name": "appGatewayFrontendPort",
					"properties": {
						"Port": "[parameters('appGatewayFrontEndPort')]"
					}
				}],

				"backendAddressPools": [{
					"name": "appGatewayBackendPool",
					"properties": {
						"copy": [{
							"name": "backendAddresses",
							"count": "[parameters('numberOfQppVMs')]",
							"input": {
								"ipAddress": "[reference(concat(variables('nicName'), copyIndex('backendAddresses'))).ipConfigurations[0].properties.privateIPAddress]"
							}
						}]
					}
				}],

				"backendHttpSettingsCollection": [{
					"name": "appGatewayBackendHttpSettings",
					"properties": {
						"Port": 61400,
						"Protocol": "Http",
						"CookieBasedAffinity": "Enabled"
					}
				}],
				"httpListeners": [{
					"name": "appGatewayHttpListener",
					"properties": {
						"FrontendIPConfiguration": {
							"Id": "[concat(variables('applicationGatewayID'), '/frontendIPConfigurations/appGatewayFrontendIP')]"
						},
						"FrontendPort": {
							"Id": "[concat(variables('applicationGatewayID'), '/frontendPorts/appGatewayFrontendPort')]"
						},
						"Protocol": "Http",
						"SslCertificate": null
					}
				}],
				"requestRoutingRules": [{
					"Name": "rule1",
					"properties": {
						"RuleType": "Basic",
						"httpListener": {
							"id": "[concat(variables('applicationGatewayID'), '/httpListeners/appGatewayHttpListener')]"
						},
						"backendAddressPool": {
							"id": "[concat(variables('applicationGatewayID'), '/backendAddressPools/appGatewayBackendPool')]"
						},
						"backendHttpSettings": {
							"id": "[concat(variables('applicationGatewayID'), '/backendHttpSettingsCollection/appGatewayBackendHttpSettings')]"
						}
					}
				}],
				"sslCertificates": []
			},
			"dependsOn": [
				"qppextensionloop",
				"[concat('Microsoft.Network/publicIPAddresses/', variables('gwPublicIpAddressName'))]"
			]
		},
		{
			"name": "[concat(variables('qppVirtualMachineName'), copyIndex())]",
			"type": "Microsoft.Compute/virtualMachines",
			"apiVersion": "2016-04-30-preview",
			"location": "[resourceGroup().location]",
			"dependsOn": [
				"qppnicloop",
				"[concat('Microsoft.Storage/storageAccounts/', variables('diagnosticsStorageAccountName'))]",
				"[concat('Microsoft.Network/virtualNetworks/', variables('vnetName'))]"
			],
			"properties": {
				"osProfile": {
					"computerName": "[concat(variables('qppVirtualMachineName'), copyIndex())]",
					"adminUsername": "[parameters('QppVMAdminUsername')]",
					"adminPassword": "[parameters('QppVMAdminPassword')]",
					"windowsConfiguration": {
						"provisionVmAgent": "true"
					}
				},
				"hardwareProfile": {
					"vmSize": "[parameters('QppVirtualMachineSize')]"
				},
				"storageProfile": {
					"imageReference": {
						"publisher": "MicrosoftWindowsServer",
						"offer": "WindowsServer",
						"sku": "[parameters('QppWindowsOSVersion')]",
						"version": "latest"
					},
					"osDisk": {
						"createOption": "fromImage",
						"managedDisk": {
							"storageAccountType": "Premium_LRS"
						}
					},
					"dataDisks": []
				},
				"networkProfile": {
					"networkInterfaces": [{
						"id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nicName'), copyIndex()))]"
					}]
				},
				"diagnosticsProfile": {
					"bootDiagnostics": {
						"enabled": true,
						"storageUri": "[reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', variables('diagnosticsStorageAccountName')), '2015-06-15').primaryEndpoints['blob']]"
					}
				}
			},
			"copy": {
				"name": "qppvmloop",
				"count": "[parameters('numberOfQppVMs')]"
			}
		},

		{
			"name": "[concat(variables('qppVirtualMachineName'), copyIndex(),'/CustomScriptExtension')]",
			"type": "Microsoft.Compute/virtualMachines/extensions",
			"location": "[resourceGroup().location]",
			"apiVersion": "2015-06-15",
			"dependsOn": ["qppvmloop"],
			"properties": {
				"publisher": "Microsoft.Compute",
				"type": "CustomScriptExtension",
				"typeHandlerVersion": "1.7",
				"autoUpgradeMinorVersion": true,
				"settings": {
					"fileUris": "[split(variables('scriptFileUri'), ' ')]"
				},
				"protectedSettings": {
					"commandToExecute": "[concat (variables('firstFileName'), ' ', variables('scriptArguments'), ' ', concat('\"',listKeys(resourceId('Microsoft.Storage/storageAccounts', variables('assetsStorageName')), providers('Microsoft.Storage', 'storageAccounts').apiVersions[0]).keys[0].value, '\"'), ' ', reference(concat(variables('nicName'), '0')).ipConfigurations[0].properties.privateIPAddress )]"
				}
			},
			"copy": {
				"name": "qppextensionloop",
				"count": "[parameters('numberOfQppVMs')]"
			}
		},

		{
			"name": "[variables('diagnosticsStorageAccountName')]",
			"type": "Microsoft.Storage/storageAccounts",
			"apiVersion": "2015-06-15",
			"location": "[resourceGroup().location]",
			"properties": {
				"accountType": "[variables('diagnosticsStorageAccountType')]"
			}
		},
		{
			"name": "[concat(variables('nicName'), copyIndex())]",
			"type": "Microsoft.Network/networkInterfaces",
			"apiVersion": "2016-09-01",
			"location": "[resourceGroup().location]",
			"dependsOn": [
				"qppvmiploop",
				"[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
			],
			"properties": {
				"ipConfigurations": [{
					"name": "ipconfig1",
					"properties": {
						"subnet": {
							"id": "[variables('subnetRefVms')]"
						},
						"privateIPAllocationMethod": "Dynamic",
						"publicIpAddress": {
							"id": "[resourceId(resourceGroup().name,'Microsoft.Network/publicIpAddresses', concat(variables('vmPublicIpAddressName'), copyIndex()))]"
						}
					}
				}],
				"networkSecurityGroup": {
					"id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
				}
			},
			"copy": {
				"name": "qppnicloop",
				"count": "[parameters('numberOfQppVMs')]"
			}
		},
		{
			"name": "[concat(variables('vmPublicIpAddressName'), copyIndex())]",
			"type": "Microsoft.Network/publicIpAddresses",
			"apiVersion": "2016-09-01",
			"location": "[resourceGroup().location]",
			"properties": {
				"publicIpAllocationMethod": "[parameters('QppVMPublicIpAddressType')]"
			},
			"copy": {
				"name": "qppvmiploop",
				"count": "[parameters('numberOfQppVMs')]"
			}
		},
		{
			"name": "[variables('networkSecurityGroupName')]",
			"type": "Microsoft.Network/networkSecurityGroups",
			"apiVersion": "2016-09-01",
			"location": "[resourceGroup().location]",
			"properties": {
				"securityRules": [{
						"name": "default-allow-rdp",
						"properties": {
							"priority": 1000,
							"sourceAddressPrefix": "*",
							"protocol": "TCP",
							"destinationPortRange": "3389",
							"access": "Allow",
							"direction": "Inbound",
							"sourcePortRange": "*",
							"destinationAddressPrefix": "*"
						}
					},
					{
						"name": "Qpp-Server",
						"properties": {
							"priority": 500,
							"sourceAddressPrefix": "*",
							"protocol": "TCP",
							"destinationPortRange": "61400-61407",
							"access": "Allow",
							"direction": "Inbound",
							"sourcePortRange": "*",
							"destinationAddressPrefix": "*"
						}
					}
				]
			}
		}
	],
	"outputs": {
		"platformGatewayIp": {
			"type": "string",
			"value": "[concat('Platform Gateway IP ', variables('publicIPRef') )]"
		}
	}
}
